# libarithmos

./: .travis.yml  ChangeLog.md  INSTALL.md  Makefile.am  Makefile.in  NEWS.md  README.md  aclocal.m4  config.h.in  configure  configure.ac
docs/: Makefile.am  Makefile.in
docs/aclocal/: Makefile.am  Makefile.in  libarithmos.m4
docs/manpages/: Makefile.am  Makefile.in  libarithmos.3
src/: Makefile.am  Makefile.in  arithmos.cpp  arithmos.h  arithmos.tcc
tests/: Makefile.am  Makefile.in  atlocal.in  convert.at  numbers.at  package.m4  testsuite  testsuite.at  usage.cpp
